renamed ml files

--- a/MachineLearningModels/notebooks/DataPreparation.ipynb
+++ b/MachineLearningModels/notebooks/DataPreparation.ipynb
@@ -8,7 +8,10 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import pickle as pkl\n",
+    "from sklearn.preprocessing import OrdinalEncoder\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -655,17 +658,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "ba214393-9980-4f6c-b0c0-35630f684428",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import OrdinalEncoder\n",
-    "from sklearn.model_selection import train_test_split"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "id": "f6dccc2a-473d-4dfe-92cb-34bff06fc5ab",
    "metadata": {},
@@ -732,19 +724,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "c3723700-193a-4f79-8790-d0e5b4234259",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data[\"Property Type\"] = encoded_features[:, 0]\n",
-    "data[\"Address\"] = encoded_features[:, 1]\n",
-    "data[\"Law Document\"] = encoded_features[:, 2]\n",
-    "data[\"City\"] = encoded_features[:, 3]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "id": "3e28cd87",
    "metadata": {},
@@ -793,14 +772,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "65219053-a2f5-4cd2-8253-f354ab549b21",
+   "cell_type": "markdown",
+   "id": "96a0d082",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# save encoder and data\n",
-    "import pickle as pkl"
+    "Save encoder for later inferences"
    ]
   },
   {
@@ -811,6 +787,14 @@
    "outputs": [],
    "source": [
     "pkl.dump(encoder, open(\"CategoricalDataEncoder.h5\", 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca7ccd4a",
+   "metadata": {},
+   "source": [
+    "Split data into training and testing set, test size = 20%"
    ]
   },
   {
@@ -846,57 +830,6 @@
     "\n",
     "X_train.to_csv(\"data/train_data_2nd.csv\")\n",
     "X_test.to_csv(\"data/test_data_2nd.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "415bce6f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/sklearn/base.py:376: InconsistentVersionWarning: Trying to unpickle estimator OrdinalEncoder from version 1.5.1 when using version 1.5.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
-      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "encoder = pkl.load(open(\"../models/CategoricalDataEncoder.h5\", 'rb'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "4065972e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array(['Căn hộ', 'Căn hộ Studio', 'Nhà phố', 'Nhà riêng', 'biệt thự'],\n",
-       "       dtype=object),\n",
-       " array(['- Biet thu, Đuong Nguyen Đuc Thuan, Đang Xa, Gia Lam, Ha Noi',\n",
-       "        '- Biet thu, Đuong QL 5, Đang Xa, Gia Lam, Ha Noi',\n",
-       "        '- Lien ke, La Khe, Kien Hung, Ha Đong, Ha Noi', ...,\n",
-       "        'Ấp Đông 1 - 2, Thới Tam Thôn, Hóc Môn',\n",
-       "        'Ấp Đông 1, Thới Tam Thôn, Hóc Môn', 'Ụ Ghe, Tam Phú, Thủ Đức'],\n",
-       "       dtype=object),\n",
-       " array(['Chu quyen tu nhan', 'Giay tay', 'Giay to hop le', 'Giay đo',\n",
-       "        'Hop đong', 'KXĐ', 'So hong', 'Đang hop thuc hoa'], dtype=object),\n",
-       " array(['HCM', 'HN'], dtype=object)]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "encoder.categories_"
    ]
   }
  ],
