updated file paths in notebooks

--- a/MachineLearningModels/notebooks/DataPreparation.ipynb
+++ b/MachineLearningModels/notebooks/DataPreparation.ipynb
@@ -24,8 +24,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/2x/6_yk_ybn3k1dgqyhmb23fpt40000gn/T/ipykernel_1290/3925512904.py:1: DtypeWarning: Columns (1) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  data = pd.read_csv(\"data/final_2nd.csv\")\n"
+      "/var/folders/2x/6_yk_ybn3k1dgqyhmb23fpt40000gn/T/ipykernel_2538/2280104437.py:1: DtypeWarning: Columns (1) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  data = pd.read_csv(\"../data/final_2nd.csv\")\n"
      ]
     },
     {
@@ -196,7 +196,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv(\"data/final_2nd.csv\")\n",
+    "data = pd.read_csv(\"../data/final_2nd.csv\")\n",
     "data.head()"
    ]
   },
@@ -786,7 +786,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pkl.dump(encoder, open(\"CategoricalDataEncoder.h5\", 'wb'))"
+    "pkl.dump(encoder, open(\"../models/CategoricalDataEncoder.h5\", 'wb'))"
    ]
   },
   {
@@ -828,8 +828,8 @@
     "X_train.insert(loc=X_train.shape[1], column=\"Price (billion VND)\", value=y_train)\n",
     "X_test.insert(loc=X_test.shape[1], column=\"Price (billion VND)\", value=y_test)\n",
     "\n",
-    "X_train.to_csv(\"data/train_data_2nd.csv\")\n",
-    "X_test.to_csv(\"data/test_data_2nd.csv\")"
+    "X_train.to_csv(\"../data/train_data_2nd.csv\")\n",
+    "X_test.to_csv(\"../data/test_data_2nd.csv\")"
    ]
   }
  ],
