--- a/MachineLearningModels/notebooks/SVM.ipynb
+++ b/MachineLearningModels/notebooks/SVM.ipynb
@@ -1445,8 +1445,6 @@
    },
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "\n",
     "pickle.dump(l_svm_with_standardize, open(\"../models/LinearSVM.h5\", 'wb'))"
    ]
   },
@@ -2642,10 +2640,7 @@
    },
    "outputs": [],
    "source": [
-    "# import pickle\n",
-    "\n",
-    "# pickle.dump(l_svm_with_standardize, open(\"models/LinearSVM.h5\", 'wb'))\n",
-    "pickle.dump(svm_with_standardize, open(\"SVM.h5\", 'wb'))"
+    "pickle.dump(svm_with_standardize, open(\"../models/SVM.h5\", 'wb'))"
    ]
   },
   {
