--- a/MachineLearningModels/notebooks/Testing.ipynb
+++ b/MachineLearningModels/notebooks/Testing.ipynb
@@ -12,6 +12,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error, mean_absolute_percentage_error, root_mean_squared_error, \\\n",
+    "                            median_absolute_error, accuracy_score, precision_score, recall_score, f1_score, \\\n",
+    "                            confusion_matrix, ConfusionMatrixDisplay\n",
+    "from xgboost import XGBRegressor, XGBClassifier\n",
+    "import pickle\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 4760,
@@ -27,9 +44,6 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "\n",
     "data_test = pd.read_csv(\"../data/test_data_2nd.csv\")\n",
     "X = data_test.iloc[:, 1:-1]\n",
     "y = data_test.iloc[:, -1]"
@@ -531,16 +545,6 @@
     }
    ],
    "source": [
-    "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
-    "from sklearn.svm import LinearSVR\n",
-    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
-    "from sklearn.kernel_approximation import RBFSampler\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import mean_absolute_percentage_error\n",
-    "from xgboost import XGBRegressor\n",
-    "import pickle\n",
-    "\n",
     "lr = pickle.load(open(\"../models/LinearRegression.h5\"), 'rb')\n",
     "ridge = pickle.load(open(\"../models/Ridge.h5\"), 'rb')\n",
     "lasso = pickle.load(open(\"../models/Lasso.h5\"), 'rb')\n",
@@ -647,8 +651,6 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import mean_absolute_error, mean_absolute_percentage_error, root_mean_squared_error, median_absolute_error\n",
-    "\n",
     "def median_absolute_percentage_error(y_true, y_pred):\n",
     "  result = abs(y_true - y_pred) / y_true\n",
     "  return result.median()\n",
@@ -711,9 +713,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
     "fig, (ax1, ax2) = plt.subplots(2,1, sharex=True)\n",
     "\n",
     "ax1.bar((np.arange(len(model_names)) - 0.2)*1.5, [losses[model]['mae'] for model in model_names], width=0.4, label=\"MAE\")\n",
@@ -2212,11 +2211,6 @@
     }
    ],
    "source": [
-    "from sklearn.svm import LinearSVC\n",
-    "from sklearn.ensemble import GradientBoostingClassifier, RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from xgboost import XGBClassifier\n",
-    "\n",
     "l_svm = pickle.load(open(\"../models/LinearSVM_Classifier.h5\"), 'rb')\n",
     "gb = pickle.load(open(\"../models/GradientBoosting_Classifier.h5\"), 'rb')\n",
     "rf = pickle.load(open(\"../models/RandomForest_Classifier.h5\"), 'rb')\n",
@@ -2299,8 +2293,6 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
-    "\n",
     "model_names = [\"Linear SVM\", \"Random Forest\", \"Gradient Boosting\", \"XGBoost\"]\n",
     "losses = {model:{'accuracy':0,'precision':0,'recall':0,'f1':0} for model in model_names}\n",
     "\n",
@@ -2392,6 +2384,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Confusion Matrices for Classification models**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
@@ -2425,9 +2424,6 @@
     }
    ],
    "source": [
-    "# Confusion matrix\n",
-    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
-    "\n",
     "cm = ConfusionMatrixDisplay(confusion_matrix(y, y_gb), display_labels=[\"Apartment\",\"Studio Apartment\",\"Townhouse\",\"Private House\",\"Villa\"])\n",
     "cm.plot()\n",
     "plt.title('Confusion matrix of property types by Gradient Boosting model')\n",
@@ -2471,8 +2467,6 @@
     }
    ],
    "source": [
-    "# Confusion matrix\n",
-    "\n",
     "cm = ConfusionMatrixDisplay(confusion_matrix(y, y_xgb), display_labels=[\"Apartment\",\"Studio Apartment\",\"Townhouse\",\"Private House\",\"Villa\"])\n",
     "cm.plot()\n",
     "plt.title('Confusion matrix of property types by XGBoost model')\n",
@@ -2516,8 +2510,6 @@
     }
    ],
    "source": [
-    "# Confusion matrix\n",
-    "\n",
     "cm = ConfusionMatrixDisplay(confusion_matrix(y, y_rf), display_labels=[\"Apartment\",\"Studio Apartment\",\"Townhouse\",\"Private House\",\"Villa\"])\n",
     "cm.plot()\n",
     "plt.title('Confusion matrix of property types by Random Forest model')\n",
